# konsilisyum

./: .gitignore  README.md  TEKNIK-TASARIM.md  URUN-TANIMI.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: ci.yml  docs.yml  release.yml
.jules/: sentinel.md
data/: config.yaml
docs/: index.md
docs/api/: config.md  models.md  providers.md
docs/architecture/: api.md  commands.md  memory.md  orchestrator.md  overview.md
docs/assets/css/: extra.css
docs/development/: changelog.md  contributing.md  testing.md
docs/examples/: business-plan.md  ethics.md  index.md  tech-design.md
docs/getting-started/: first-session.md  installation.md  quickstart.md
docs/usage/: agents.md  commands.md  sessions.md  tui.md
konsilisyum/: __init__.py  bootstrap.py  main.py
konsilisyum/api/: __init__.py  embeddings.py  keypool.py  llm.py  mistral.py  providers.py
konsilisyum/commands/: __init__.py  handler.py  parser.py
konsilisyum/config/: __init__.py  defaults.py  settings.py
konsilisyum/core/: __init__.py  errors.py  logging.py  memory.py  models.py  orchestrator.py  session.py  vector_memory.py
konsilisyum/tui/: __init__.py  app.py  theme.tcss
konsilisyum/web/: app.py  routes.py  schemas.py  websocket.py
tests/: test_bootstrap.py  test_commands.py  test_config.py  test_embeddings.py  test_integration.py  test_logging.py  test_main.py  test_main_integration.py  test_security.py  test_security_hardening.py  test_security_leakage.py  test_security_sentinel.py  test_tui.py  test_unit.py  test_vector_memory.py
tests/test_web/: test_routes.py  test_websocket.py
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/session/[id]/: page.tsx
web/components/: AgentCards.tsx  BackstagePanel.tsx  CommandInput.tsx  Header.tsx  MessageCard.tsx  MessageStream.tsx  QuickCommands.tsx
web/hooks/: useWebSocket.ts
web/lib/: api.ts
web/stores/: sessionStore.ts
